# aoc

./: pyproject.toml
2015/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py
2018/: day1.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day8.py
2019/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day12.py  day13.py  (+4 more)
aoc-python/: .gitignore  aoc.py  pyproject.toml
aoc-python/2015/: day10.py
aoc-python/2019/: test_day07.py
aoc-python/2020/: day09.py
aoc-python/2021/: day01.py  day03.py  day08.py
aoc-python/2022/: day13.py
aoc-python/2023/: day01.py  day09.py  day25.py
aoc-python/2024/: day01.py  day02.py  day03.py  day05.py  day13.py
aoc-python/2025/: day01.py  day02.py  day03.py
python/: aoc.py  pyproject.toml
python/2015/: day02.py  day03.py  day04.py  day05.py  day07.py  day11.py  day12.py  day13.py
python/2018/: day3.py  day4.py  day5.py  day8.py
python/2019/: day03.py  day04.py  day05.py  day07.py  day09.py  day10.py  day11.py  day13.py  day14.py  day15.py  int_code.py  test_day02.py
python/2020/: day02.py  day03.py  day05.py  day06.py  day07.py  day18.py
python/2021/: day02.py  day04.py  day05.py  day06.py  day07.py  day09.py  day10.py
python/2022/: day03.py  day04.py  day05.py  day06.py  day08.py  day10.py  day13.py
python/2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day2020.py  day21.py  day22.py  day23.py  day24.py  day25.py
python/2024/: day01.py  day02.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py
(+54 files in other folders)
