[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Code-Apprentice <codeguru42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
advent-of-code-data = "^2.0.1"
browser-cookie3 = "^0.20.1"
pytest = "^8.3.4"
black = "^24.10.0"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
numpy = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
