[project]
name = "aoc-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "advent-of-code-data>=2.1.0",
    "black>=25.11.0",
    "browser-cookie3>=0.20.1",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "pytest>=9.0.1",
    "scipy>=1.16.3",
]
