[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Code-Apprentice <codeguru42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
advent-of-code-data = "^2.0.1"
browser-cookie3 = "^0.19.1"
pytest = "^7.4.3"
black = "^23.11.0"
numpy = "^1.26.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
